--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "5.3.0",
     "react_ujs": "^2.6.2",
+    "reactstrap": "^9.0.2",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
